<resources>
    <string name="app_name">TaskManeger</string>
    <string name="all">All</string>
    <string name="running">Running</string>
    <string name="pending">Pending</string>
    <string name="complete">Complete</string>
    <string name="pending_button">pending button</string>
    <string name="notification">Notification</string>
    <string name="add_task">Add Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="description_hint">Description</string>
    <string name="mm_dd_yyyy">MM-DD-YYYY</string>
    <string name="hh_mm_ss">HH:MM:SS</string>
    <string name="strat_time_end_time">Start time / End time</string>
    <string name="xxxxx">XXXXX</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="image_button">image button</string>
    <string name="status">Status</string>
    <string name="update_task">Update Task</string>

</resources>