<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ScrollViewCount">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="36dp"
                android:hint="@string/title"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="36dp"
                android:hint="@string/description"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@+id/titleInputLayout"
                app:layout_constraintStart_toStartOf="@+id/titleInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/titleInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/statusInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="36dp"
                android:hint="@string/status"
                app:endIconMode="clear_text"
                app:helperText="*Pending/Running/Complete"
                app:layout_constraintEnd_toEndOf="@+id/descriptionInputLayout"
                app:layout_constraintStart_toStartOf="@+id/descriptionInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/descriptionInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/statusId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/strat_time_end_time"
                android:textColor="#96CAA4A4"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/statusInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/statusInputLayout" />

            <EditText
                android:id="@+id/uStartTime"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:hint="@string/hh_mm_ss"
                android:inputType="time"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <View
                android:id="@+id/view"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/line"
                app:layout_constraintBottom_toBottomOf="@+id/uStartTime"
                app:layout_constraintStart_toEndOf="@+id/uStartTime"
                app:layout_constraintTop_toTopOf="@+id/uStartTime" />

            <EditText
                android:id="@+id/uEndTime"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginStart="22dp"
                android:hint="@string/hh_mm_ss"
                android:importantForAutofill="no"
                android:inputType="time"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintStart_toEndOf="@+id/uStartTime"
                app:layout_constraintTop_toTopOf="@+id/view"
                app:layout_constraintVertical_bias="0.64" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateData"
                android:layout_width="294dp"
                android:layout_height="70dp"
                android:backgroundTint="#0EDFC6"
                android:text="@string/update_task"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="25dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/statusInputLayout"
                app:layout_constraintStart_toStartOf="@+id/statusInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/view"
                tools:ignore="UnusedAttribute" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>