<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3D72DE"
    tools:context=".activities.AddTaskActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/in_card">

            <EditText
                android:id="@+id/taskTitle"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/edit_tbg"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/taskDescription"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/description_bg"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/description_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="@+id/taskTitle"
                app:layout_constraintStart_toStartOf="@+id/taskTitle"
                app:layout_constraintTop_toBottomOf="@+id/taskTitle"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/strat_time_end_time"
                android:textColor="#96CAA4A4"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/taskDescription"
                app:layout_constraintTop_toBottomOf="@+id/taskDescription" />

            <EditText
                android:id="@+id/taskStartTime"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:hint="@string/hh_mm_ss"
                android:inputType="time"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <View
                android:id="@+id/view"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/line"
                app:layout_constraintBottom_toBottomOf="@+id/taskStartTime"
                app:layout_constraintStart_toEndOf="@+id/taskStartTime"
                app:layout_constraintTop_toTopOf="@+id/taskStartTime" />

            <EditText
                android:id="@+id/taskEndTime"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginStart="22dp"
                android:hint="@string/hh_mm_ss"
                android:importantForAutofill="no"
                android:inputType="time"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintStart_toEndOf="@+id/taskStartTime"
                app:layout_constraintTop_toTopOf="@+id/view"
                app:layout_constraintVertical_bias="0.64" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="168dp"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/spinner_bg"
                app:layout_constraintStart_toStartOf="@+id/taskStartTime"
                app:layout_constraintTop_toBottomOf="@+id/taskStartTime" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitData"
                android:layout_width="294dp"
                android:layout_height="70dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="#0EDFC6"
                app:cornerRadius="25dp"
                android:text="@string/add_task"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/taskDescription"
                app:layout_constraintStart_toStartOf="@+id/taskDescription"
                app:layout_constraintTop_toBottomOf="@id/spinner"
                tools:ignore="UnusedAttribute" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>